--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ input[type="text"] {
 .meal img {
   width: 100%;
   height: 100%;
-  border: 4px #fff solid;
+  border: 4px #e09850 dashed;
   border-radius: 4px;
 }
 
@@ -93,12 +93,74 @@ input[type="text"] {
   opacity: 1;
 }
 
+.single-meal {
+  margin: 30px auto;
+  width: 70%;
+}
+.single-meal img {
+  width: 420px;
+  margin: 15px;
+  border: 4px #e09850 dashed;
+  border-radius: 4px;
+}
+
+.single-meal-info {
+  margin: 20px;
+  padding: 10px;
+  border: 2px #e09850 dashed;
+  border-radius: 10px;
+  font-size: 24px;
+}
+
+.single-meal p {
+  margin: 0;
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
+
+.single-meal ul {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.single-meal ul li {
+  border: 1px solid #ededed;
+  border-radius: 5px;
+  background-color: #ffffff;
+  display: inline-block;
+  color: #3d2020;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px;
+  margin: 0 5px 5px 0;
+}
+
 @media (max-width: 800px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media (max-width: 700px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .meal {
+    height: 200px;
+    width: 200px;
+  }
 }
 @media (max-width: 500px) {
   input[type="text"] {
     width: 100%;
+  }
+
+  .meals {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .meal {
+    height: 300px;
+    width: 300px;
   }
 }
